[project]
name = "rolling-window-temperature-pinn"
version = "0.1.0"
description = "This project showcases the implementation of a rolling window learning rate scheduler and temperature-dependent material parameter update procedure for phyisics-informed neural networks."
authors = [
    {name = "Jan A. Zak"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "numpy",
    "pandas",
    "torch (>=2.8.0,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "kaleido (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
